--- a/cors2.html
+++ b/cors2.html
@@ -83,6 +83,7 @@
 
         const next = () => {
             const $img = $imgs.shift();
+            $img.crossOrigin='anonymous'
 
             const $cnv = document.createElement('canvas');
             $cnv.width = 190;
