--- a/cors2.html
+++ b/cors2.html
@@ -89,7 +89,7 @@
         const ctx = $cnv.getContext('2d');
 
         try {
-            ctx.drawImage($img, 0, 0, 200, 200);
+            ctx.drawImage(img, 0, 0, 200, 200);
             $drawnImages.appendChild($cnv);
         } catch (e) {
             log('<b>Error draw (checkImage())</b> ' + img.src + ': ' + e.message)
