--- a/cors2.html
+++ b/cors2.html
@@ -81,7 +81,7 @@
 
     function checkImage() {
         var img = new Image();
-        img.src = 'https://i.imgur.com/Uschheg.jpeg'
+        img.src = 'https://i.imgur.com/Uschheg.jpeg#' + new Date().getTime();
 
         const $cnv = document.createElement('canvas');
         $cnv.width = 190;
