--- a/cors2.html
+++ b/cors2.html
@@ -115,7 +115,7 @@
 
         const next = () => {
             const $img = $imgs.shift();
-            //$img.crossOrigin='anonymous'
+            $img.crossOrigin='anonymous'
 
             setTimeout(() => {
                 const $cnv = document.createElement('canvas');
