--- a/background.html
+++ b/background.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Background test</title>
 </head>
-<body id="body" background-color="black">
+<body id="body">
+    <img width="100%" height="100%" src="https://ichef.bbci.co.uk/news/976/cpsprodpb/12A9B/production/_111434467_gettyimages-1143489763.jpg">
 </body>
 </html>
