--- a/background.html
+++ b/background.html
@@ -8,7 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Background test</title>
 </head>
-<body id="body" background-color="red">
+<body id="body">
+    <style>
+        html {
+         background-color: #373737;
+        }
+    </style>
     <img width="100%" height="100%" src="https://ichef.bbci.co.uk/news/976/cpsprodpb/12A9B/production/_111434467_gettyimages-1143489763.jpg">
 </body>
 </html>
