--- a/personal.html
+++ b/personal.html
@@ -9,6 +9,6 @@
     <title>Personal data</title>
 </head>
 <body id="body">
-    <link rel="Personal data" href="edit-personal-data://clean-all">
+    <link title="Personal data" href="edit-personal-data://clean-all">
 </body>
 </html>
