--- a/cors2.html
+++ b/cors2.html
@@ -1,152 +1,19 @@
-
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>iOS cors 3</title>
-
-    <style>
-        .generated-images3 {
-            position: fixed;
-            left: -9999px;
-            top: -9999px;
-            width: 1px;
-            height: 1px;
-        }
-        .orig-images {
-            font-size: 0;
-        }
-
-        .log {
-            white-space: pre-wrap;
-        }
-
-        img {
-            min-height: 50px;
-            min-width: 50px;
-            max-width: 200px;
-            max-height: 200px;
-            background: #eee;
-            margin: 0 10px 10px 0;
-            border: 1px solid #888;
-        }
-
-        canvas {
-            margin-right: 10px;
-        }
-    </style>
-</head>
-<body>
-
-<h4>Orig images 1</h4>
-
-<div class="orig-images" id="origImages">
-    <img src="https://ychef.files.bbci.co.uk/1600x900/p09c5d34.webp">
-    <img src="https://i.imgur.com/WzAyY62.jpeg" crossorigin="anonymous">
-    <img src="https://i.imgur.com/MNFL28J.jpeg">
-    <img src="https://i.imgur.com/V2Ohnhq.jpeg">
-    <img src="https://i.imgur.com/3dZfBV7.jpeg">
-    <img src="https://i.imgur.com/pRYGHs3.jpeg">
-</div>
-
-<div class="input-container">
-    <button onclick="drawImages()">Draw images on canvas and read data</button>
-    <button onclick="checkImage('https\://i.imgur.com/Uschheg.jpeg')">Test new image 1</button>
-    <button onclick="checkImage('https\://i.imgur.com/JOKsNeT.jpeg')">Test new image 2</button>
-</div>
-
-<h4>Drawn images</h4>
-
-<div class="drawn-images" id="drawnImages">
-</div>
-
-<h4>Log</h4>
-
-<div class="log" id="log"></div>
-
-<script>
-    const $drawnImages = document.querySelector('#drawnImages');
-    const $images = [...document.querySelectorAll('#origImages img')];
-    const $log = document.querySelector('#log');
-
-    window.log = (log) => {
-        const d = new Date();
-        $log.innerHTML += '[' + d.toLocaleTimeString() + '] ' + log + "\n";
-
-    };
-
-    //https://i.imgur.com/Uschheg.jpeg
-
-    //https://i.imgur.com/JOKsNeT.jpeg
-
-
-    function checkImage(url) {
-        var img = new Image();
-        img.src = url //'https://i.imgur.com/Uschheg.jpeg?' + new Date().getTime();
-        img.onload = function() {
-            const $cnv = document.createElement('canvas');
-            $cnv.width = 190;
-            $cnv.height = 190;
-            const ctx = $cnv.getContext('2d');
-
-            try {
-                ctx.drawImage(img, 0, 0, 200, 200);
-                $drawnImages.appendChild($cnv);
-            } catch (e) {
-                log('<b>Error draw (checkImage())</b> ' + img.src + ': ' + e.message)
+<!DOCTYPE HTML>
+<html>
+ <head>
+  <meta charset="utf-8">
+  <title>Тег BUTTON</title>
+ </head>
+ <body>
+    <script type="text/javascript">
+        document.write ('<table width="100%" border="1">');
+            for (i=1; i<6; i++) {
+                document.writeln("<tr>");
+                for (j=1; j<6; j++) document.write("<td>" + i + j + "<\/td>");
+                document.writeln("<\/tr>");
             }
-
-            try {
-                ctx.getImageData(0, 0, 1, 1);
-                log('<b>Success(checkImage())</b> ' + img.src);
-            } catch (e) {
-                log('<b>Reading error(checkImage())</b> ' + img.src + ': ' + e.message)
-            }
-        }
-    }
-
-    function drawImages() {
-        $drawnImages.innerHTML = '';
-
-        const $imgs = [...$images];
-
-        const next = () => {
-            const $img = $imgs.shift();
-            $img.crossOrigin='anonymous'
-
-            setTimeout(() => {
-                const $cnv = document.createElement('canvas');
-                $cnv.width = 190;
-                $cnv.height = 190;
-                const ctx = $cnv.getContext('2d');
-
-                try {
-                    ctx.drawImage($img, 0, 0, 200, 200);
-                    $drawnImages.appendChild($cnv);
-                } catch (e) {
-                    log('<b>Error draw</b> ' + $img.src + ': ' + e.message)
-                }
-
-                try {
-                    ctx.getImageData(0, 0, 1, 1);
-                    log('<b>Success</b> ' + $img.src);
-                } catch (e) {
-                    log('<b>Reading error</b> ' + $img.src + ': ' + e.message)
-                }
-
-                if ($imgs.length) next();
-            }, 1000)
-        }
-            
-
-        next();
-    }
-
-    log('Call window.log("string") to print in log');
-</script>
-
-</body>
+        document.write ("<\/table> ");
+    </script>
+  <p style="text-align: center"><button>Кнопка с текстом</button>
+ </body>
 </html>
