--- a/deeplink.html
+++ b/deeplink.html
@@ -41,7 +41,7 @@
  <body>
     <script type="text/javascript">
         function openURL() {
-            const url = "https://www.google.com";
+            const url = "viewport://?viewport_id=serp";
             window.location = url;
         };
     </script>
