--- a/deeplink.html
+++ b/deeplink.html
@@ -42,7 +42,8 @@
     <script type="text/javascript">
         function openURL() {
             const url = "viewport://?viewport_id=serp";
-            window.location = url;
+            //window.location = url;
+            window.open(url);
         };
     </script>
   <p style="text-align: center" onclick="openURL()"><button>Кнопка с текстом</button>
