--- a/deeplink.html
+++ b/deeplink.html
@@ -41,11 +41,11 @@
  <body>
     <script type="text/javascript">
         function openURL() {
-            const url = "viewport://?text=Foo&viewport_id=serp";
-            //window.location = url;
+            //const url = "viewport://?text=Foo&viewport_id=serp";
+            const url = "portal-ptr://?delay=4000"
             window.open(url);
         };
     </script>
-  <p style="text-align: center" onclick="openURL()"><button>Кнопка с текстом</button>
+  <p style="text-align: center" onclick="openURL()"><button>Update portal</button>
  </body>
 </html>
