--- a/deeplink.html
+++ b/deeplink.html
@@ -41,8 +41,8 @@
  <body>
     <script type="text/javascript">
         function openURL() {
-            //const url = "viewport://?text=Foo&viewport_id=serp";
-            const url = "portal-ptr://?delay=4000"
+            const url = "viewport://?text=Foo&viewport_id=serp";
+            //const url = "portal-ptr-x://?delay=4000"
             window.open(url);
         };
     </script>
