--- a/deeplink.html
+++ b/deeplink.html
@@ -45,7 +45,7 @@
             window.open(url);
         };
         function refreshPortal() {
-            const url = "portal-ptr-x://?delay=4000"
+            const url = "portalptrx://?delay=4000"
             window.open(url);
         };
     </script>
