--- a/deeplink.html
+++ b/deeplink.html
@@ -49,7 +49,7 @@
             window.open(url);
         };
         function refreshPortal2() {
-            const url = "portal-ptr-x%3A%2F%2F%3Fdelay%3D4000"
+            const url = "ya-search-app-open://?uri=portal-ptr-x%3A%2F%2F%3Fdelay%3D4000"
             window.open(url);
         }
     </script>
