--- a/deeplink.html
+++ b/deeplink.html
@@ -45,11 +45,11 @@
             window.open(url);
         };
         function refreshPortal() {
-            const url = "portal-ptr-x://?delay=4000"
+            const url = "portal-ptr://?delay=4000"
             window.open(url);
         };
         function refreshPortal2() {
-            const url = "ya-search-app-open://?uri=portal-ptr-x%3A%2F%2F%3Fdelay%3D4000"
+            const url = "ya-search-app-open://?uri=portal-ptr%3A%2F%2F%3Fdelay%3D4000"
             window.open(url);
         }
     </script>
