--- a/stateful.html
+++ b/stateful.html
@@ -45,5 +45,7 @@
         };
     </script>
   <p style="text-align: center" onclick="markAllStateful()"><button>Viewport</button>
+  <p><a href="https://en.wikipedia.org/wiki/Main_Page">https://en.wikipedia.org/wiki/Main_Page</a></p>
+  <p><a href="https://en.wikipedia.org/wiki/2022_Cetinje_shooting">https://en.wikipedia.org/wiki/2022_Cetinje_shooting</a></p>
  </body>
 </html>
