--- a/storage.html
+++ b/storage.html
@@ -40,8 +40,11 @@
     </head>
  <body>
     <script type="text/javascript">
-        const myContent = "Foo-Bar-Baz";
-        localStorage.setItem("myContent", myContent);
+        const data = "Foo-Bar-Baz";
+        for(let i = 0; i < 10; ++i) {
+            data += data;
+        }
+        localStorage.setItem("_data_", data);
     </script>
   <p style="text-align: center" onclick="openViewport()"><button>Viewport</button>
   <p style="text-align: center" onclick="refreshPortal()"><button>Refresh portal</button>
