--- a/storage.html
+++ b/storage.html
@@ -39,6 +39,7 @@
         </style>
     </head>
  <body>
+    <H1>LOCAL STORAGE FILLED.</H1>
     <script type="text/javascript">
         const data = "Foo-Bar-Baz";
         for(let i = 0; i < 10; ++i) {
