--- a/storage.html
+++ b/storage.html
@@ -41,7 +41,7 @@
  <body>
     <H1>LOCAL STORAGE FILLED.</H1>
     <script type="text/javascript">
-        const data = "Foo-Bar-Baz";
+        var data = "Foo-Bar-Baz";
         for(let i = 0; i < 10; ++i) {
             data += data;
         }
