--- a/storage.html
+++ b/storage.html
@@ -41,11 +41,11 @@
  <body>
     <H1>LOCAL STORAGE FILLED.</H1>
     <script type="text/javascript">
-        // var data = "Foo-Bar-Baz";
-        // for(let i = 0; i < 15; ++i) {
-        //     data += data;
-        // }
-        // document.cookie = data;
+        let cacheName = 'userSettings';
+        let url = '/cors/manul.jpg';
+        caches.open(cacheName).then( cache => {
+            cache.add(url).then(() => { console.log("Data cached ") });
+        });
     </script>
  </body>
 </html>
