--- a/smrz.html
+++ b/smrz.html
@@ -88,5 +88,6 @@
 
     </script>
   <p style="text-align: center" onclick="checkCanSummarize()"><button>checkCanSummarize</button>
+    <p style="text-align: center" onclick="summarize()"><button>summarize</button>
  </body>
 </html>
