--- a/smrz.html
+++ b/smrz.html
@@ -83,7 +83,7 @@
               "languageCode": "ru"
             }
           ];
-          yandex.videoSummarization.checkCanSummarize("FooBar", rect, subtitles);
+          yandex.videoSummarization.summarize("FooBar", rect, subtitles);
         }
 
     </script>
