--- a/smrz.html
+++ b/smrz.html
@@ -87,7 +87,7 @@
         };
 
     </script>
-  <p style="text-align: center" onclick="checkCanSummarize()"><button>checkCanSummarize</button>
-    <p style="text-align: center" onclick="summarize()"><button>summarize</button>
+  <p style="text-align: center" onclick="checkCanSummarize()"><button>checkCanSummarize</button></p>
+  <p style="text-align: center" onclick="summarize()"><button>summarize</button></p>
  </body>
 </html>
