--- a/smrz.html
+++ b/smrz.html
@@ -86,8 +86,16 @@
           yandex.videoSummarization.summarize("FooBar", rect, subtitles);
         };
 
+        function bubbleVisibilityChanged() {
+          function callback(video_id, enabled) {
+            window.alert(video_id + "→" + enabled);
+          };
+          yandex.videoSummarization.bubbleVisibilityChanged(callback);
+        }
+
     </script>
   <p style="text-align: center" onclick="checkCanSummarize()"><button>checkCanSummarize</button></p>
   <p style="text-align: center" onclick="summarize()"><button>summarize</button></p>
+  <p style="text-align: center" onclick="bubbleVisibilityChanged()"><button>bubbleVisibilityChanged</button></p>
  </body>
 </html>
