--- a/smrz.html
+++ b/smrz.html
@@ -91,6 +91,8 @@
             window.alert(video_id + "→" + enabled);
           };
           yandex.videoSummarization.bubbleVisibilityChanged.addListener(callback);
+
+          window.alert("!!!");
         }
 
     </script>
