--- a/smrz.html
+++ b/smrz.html
@@ -100,9 +100,22 @@
           );
         }
 
+        function updateVideoPosition() {
+          yandex.videoSummarization.updateVideoPosition(
+            "https://foo.bar",
+            {
+              "x": 10,
+              "y": 10,
+              "width": 100,
+              "height": 200
+            }
+          )
+        }
+
     </script>
   <p style="text-align: center" onclick="checkCanSummarize()"><button>checkCanSummarize</button></p>
   <p style="text-align: center" onclick="summarize()"><button>summarize</button></p>
   <p style="text-align: center" onclick="bubbleVisibilityChanged()"><button>bubbleVisibilityChanged</button></p>
+  <p style="text-align: center" onclick="updateVideoRect()"><button>updateVideoPosition</button></p>
  </body>
 </html>
