--- a/smrz.html
+++ b/smrz.html
@@ -116,6 +116,6 @@
   <p style="text-align: center" onclick="checkCanSummarize()"><button>checkCanSummarize</button></p>
   <p style="text-align: center" onclick="summarize()"><button>summarize</button></p>
   <p style="text-align: center" onclick="bubbleVisibilityChanged()"><button>bubbleVisibilityChanged</button></p>
-  <p style="text-align: center" onclick="updateVideoRect()"><button>updateVideoPosition</button></p>
+  <p style="text-align: center" onclick="updateVideoPosition()"><button>updateVideoPosition</button></p>
  </body>
 </html>
