--- a/smrz.html
+++ b/smrz.html
@@ -112,10 +112,22 @@
           )
         }
 
+        function maybeShowPromo() {
+          yandex.videoSummarization.maybeShowPromo(
+            "https://foo.bar",
+            {
+              "x": 20,
+              "y": 30,
+              "width": 400,
+              "height": 500
+            }
+          )
+        }
+
     </script>
   <p style="text-align: center" onclick="checkCanSummarize()"><button>checkCanSummarize</button></p>
   <p style="text-align: center" onclick="summarize()"><button>summarize</button></p>
   <p style="text-align: center" onclick="bubbleVisibilityChanged()"><button>bubbleVisibilityChanged</button></p>
-  <p style="text-align: center" onclick="updateVideoPosition()"><button>updateVideoPosition</button></p>
+  <p style="text-align: center" onclick="maybeShowPromo()"><button>maybeShowPromo</button></p>
  </body>
 </html>
