--- a/deeplink.html
+++ b/deeplink.html
@@ -52,9 +52,14 @@
             const url = "ya-search-app-open://?uri=portal-ptr%3A%2F%2F%3Fdelay%3D4000"
             window.open(url);
         }
+        function openNeuro() {
+            const url = "neuralsearch://?initial_input=%D0%BA%D0%B0%D0%BA%20%D0%B2%D0%B0%D1%80%D0%B8%D1%82%D1%8C%20%D1%80%D0%B8%D1%81"
+            window.open(url);
+        }
     </script>
   <p style="text-align: center" onclick="openViewport()"><button>Viewport</button>
   <p style="text-align: center" onclick="refreshPortal()"><button>Refresh portal</button>
   <p style="text-align: center" onclick="refreshPortal2()"><button>Refresh portal 2</button>
+  <p style="text-align: center" onclick="openNeuro()"><button>Open neuro</button>
  </body>
 </html>
