--- a/deeplink.html
+++ b/deeplink.html
@@ -56,10 +56,15 @@
             const url = "neuralsearch://?initial_input=%D0%BA%D0%B0%D0%BA%20%D0%B2%D0%B0%D1%80%D0%B8%D1%82%D1%8C%20%D1%80%D0%B8%D1%81"
             window.open(url);
         }
+        function openNeuroOnboarding() {
+            const url = "neuralsearch://blahblah"
+            window.open(url);
+        }
     </script>
   <p style="text-align: center" onclick="openViewport()"><button>Viewport</button>
   <p style="text-align: center" onclick="refreshPortal()"><button>Refresh portal</button>
   <p style="text-align: center" onclick="refreshPortal2()"><button>Refresh portal 2</button>
   <p style="text-align: center" onclick="openNeuro()"><button>Open neuro</button>
+    <p style="text-align: center" onclick="openNeuroOnboarding()"><button>Open neuro onboarding</button>
  </body>
 </html>
