--- a/deeplink.html
+++ b/deeplink.html
@@ -60,14 +60,18 @@
             const url = "neuralsearch://blahblah"
             window.open(url);
         }
+        function openChatBro() {
+            const url = "neuralsearch://?initial_input=%D0%BA%D0%B0%D0%BA%20%D0%B2%D0%B0%D1%80%D0%B8%D1%82%D1%8C%20%D1%80%D0%B8%D1%81"
+            document.location.href = url
+        }
     </script>
-  <p style="text-align: center" onclick="openViewport()"><button>Viewport</button>
-  <p style="text-align: center" onclick="refreshPortal()"><button>Refresh portal</button>
-  <p style="text-align: center" onclick="refreshPortal2()"><button>Refresh portal 2</button>
-  <p style="text-align: center" onclick="openNeuro()"><button>Open neuro</button>
-  <p style="text-align: center" onclick="openNeuroOnboarding()"><button>Open neuro onboarding</button>
-
-    <a href="neuralsearch://?initial_input=%D0%BA%D0%B0%D0%BA%20%D0%B2%D0%B0%D1%80%D0%B8%D1%82%D1%8C%20%D1%80%D0%B8%D1%81">Chat link</a>
+  <p style="text-align: center" onclick="openViewport()"><button>Viewport</button></p>
+  <p style="text-align: center" onclick="refreshPortal()"><button>Refresh portal</button></p>
+  <p style="text-align: center" onclick="refreshPortal2()"><button>Refresh portal 2</button></p>
+  <p style="text-align: center" onclick="openNeuro()"><button>Open neuro</button></p>
+  <p style="text-align: center" onclick="openNeuroOnboarding()"><button>Open neuro onboarding</button></p>
+  <p><a href="neuralsearch://?initial_input=%D0%BA%D0%B0%D0%BA%20%D0%B2%D0%B0%D1%80%D0%B8%D1%82%D1%8C%20%D1%80%D0%B8%D1%81">Chat link</a></p>
+  <p style="text-align: center" onclick="openChatBro()"><button>openChatBro</button></p>
 
 
  </body>
