--- a/deeplink.html
+++ b/deeplink.html
@@ -70,7 +70,8 @@
   <p style="text-align: center" onclick="refreshPortal2()"><button>Refresh portal 2</button></p>
   <p style="text-align: center" onclick="openNeuro()"><button>Open neuro</button></p>
   <p style="text-align: center" onclick="openNeuroOnboarding()"><button>Open neuro onboarding</button></p>
-  <p><a href="neuralsearch://?initial_input=%D0%BA%D0%B0%D0%BA%20%D0%B2%D0%B0%D1%80%D0%B8%D1%82%D1%8C%20%D1%80%D0%B8%D1%81">Chat link</a></p>
+  <p style="text-align: center"><a href="neuralsearch://?initial_input=%D0%9A%D0%BE%D0%BB%D0%BB%D0%B5%D0%B3%D0%B0%2C%20%D0%B5%D1%81%D0%BB%D0%B8%20%D1%82%D1%8B%20%D1%8D%D1%82%D0%BE%20%D1%87%D0%B8%D1%82%D0%B0%D0%B5%D1%88%D1%8C%2C%20%D0%B7%D0%BD%D0%B0%D1%87%D0%B8%D1%82%20%D0%B2%D1%81%D0%B5%20%D0%BE%D0%BA" target="_self">🧠</a></p>
+  <p style="text-align: center"><a href="neuralsearch://?initial_input=%D0%BA%D0%B0%D0%BA%20%D0%B2%D0%B0%D1%80%D0%B8%D1%82%D1%8C%20%D1%80%D0%B8%D1%81">Chat link</a></p>
   <p style="text-align: center" onclick="openChatBro()"><button>openChatBro</button></p>
 
 
