--- a/deeplink.html
+++ b/deeplink.html
@@ -5,11 +5,7 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Deeplink</title>
-    
-        <link rel="alternate" href="neuralsearch://?initial_input=%D0%9A%D0%BE%D0%BB%D0%BB%D0%B5%D0%B3%D0%B0%2C%20%D0%B5%D1%81%D0%BB%D0%B8%20%D1%82%D1%8B%20%D1%82%D1%8B%20%D1%8D%D1%82%D0%BE%20%D1%87%D0%B8%D1%82%D0%B0%D0%B5%D1%88%D1%8C%2C%20%D0%B7%D0%BD%D0%B0%D1%87%D0%B8%D1%82%20%D0%B2%D1%81%D0%B5%20%D0%BE%D0%BA" hrefLang="ru" />
-        <link rel="alternate" href="neuralsearch://?initial_input=%D0%9A%D0%BE%D0%BB%D0%BB%D0%B5%D0%B3%D0%B0%2C%20%D0%B5%D1%81%D0%BB%D0%B8%20%D1%82%D1%8B%20%D1%82%D1%8B%20%D1%8D%D1%82%D0%BE%20%D1%87%D0%B8%D1%82%D0%B0%D0%B5%D1%88%D1%8C%2C%20%D0%B7%D0%BD%D0%B0%D1%87%D0%B8%D1%82%20%D0%B2%D1%81%D0%B5%20%D0%BE%D0%BA" hrefLang="ru-RU" />
-        
+        <title>Deeplink</title>        
         <style>
             .generated-images3 {
                 position: fixed;
@@ -64,6 +60,9 @@
             window.open(url);
         }
         function openChatBro() {
+            Object.defineProperty(document, "referrer", {
+                get: function () { return referrerName; },
+            });
             const url = "neuralsearch://?initial_input=%D0%BA%D0%B0%D0%BA%20%D0%B2%D0%B0%D1%80%D0%B8%D1%82%D1%8C%20%D1%80%D0%B8%D1%81"
             document.location.href = url
         }
