--- a/transparent.html
+++ b/transparent.html
@@ -31,6 +31,7 @@
             font-size: 3rem;
             color: #333; /* Темно-серый цвет текста */
             text-align: center;
+            background-color: transparent;
         }
     </style>
 </head>
