--- a/transparent.html
+++ b/transparent.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+    <!-- Инструкции для браузера не кэшировать страницу -->
+    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+
     <title>Прозрачный фон</title>
     <style>
         /* Убираем отступы по умолчанию у браузера */
@@ -37,7 +43,7 @@
 </head>
 <body>
 
-   <!-- <h1>Текст по центру</h1> -->
+   <h1>Текст по центру🤨</h1>
 
 </body>
 </html>
