--- a/transparent.html
+++ b/transparent.html
@@ -10,7 +10,7 @@
     <meta http-equiv="Expires" content="0">
 
     <title>Прозрачный фон</title>
-    <style>
+    <!-- <style>
         /* Убираем отступы по умолчанию у браузера */
         html, body {
             margin: 0;
@@ -39,7 +39,7 @@
             text-align: center;
             background-color: transparent;
         }
-    </style>
+    </style> -->
 </head>
 <body>
 
