--- a/transparent.html
+++ b/transparent.html
@@ -20,7 +20,7 @@
         
         body {
             /* 1. Делаем фон прозрачным */
-            background-color: transparent;
+            background-color: rgba(255,255,255,0);
 
             /* 2. Центрируем содержимое с помощью Flexbox */
             display: flex;
@@ -37,13 +37,13 @@
             font-size: 3rem;
             color: #333; /* Темно-серый цвет текста */
             text-align: center;
-            background-color: transparent;
+            background-color: rgba(255,255,255,0);
         }
     </style>
 </head>
 <body>
 
-   <!-- <h1>Текст по центру🤨</h1> -->
+   <h1>Текст по центру🤨</h1>
 
 </body>
 </html>
