--- a/transparent.html
+++ b/transparent.html
@@ -20,7 +20,8 @@
         
         body {
             /* 1. Делаем фон прозрачным */
-            background-color: rgba(255,255,255,0);
+            background-color: transparent;
+            background: none;
 
             /* 2. Центрируем содержимое с помощью Flexbox */
             display: flex;
@@ -37,7 +38,8 @@
             font-size: 3rem;
             color: #333; /* Темно-серый цвет текста */
             text-align: center;
-            background-color: rgba(255,255,255,0);
+            background-color: transparent;
+            background: none;
         }
     </style>
 </head>
