--- a/transparent.html
+++ b/transparent.html
@@ -16,12 +16,10 @@
             margin: 0;
             padding: 0;
             height: 100%; /* Важно для корректной работы высоты body */
+            background-color: transparent;
         }
         
         body {
-            /* 1. Делаем фон прозрачным */
-            background-color: transparent;
-
             /* 2. Центрируем содержимое с помощью Flexbox */
             display: flex;
             justify-content: center; /* Центрирование по горизонтали */
@@ -37,13 +35,12 @@
             font-size: 3rem;
             color: #333; /* Темно-серый цвет текста */
             text-align: center;
-            background-color: transparent;
         }
     </style>
 </head>
 <body>
 
-   <h1>Текст по центру😎</h1>
+   <h1>Текст по центру🤓</h1>
 
 </body>
 </html>
