--- a/transparent.html
+++ b/transparent.html
@@ -16,7 +16,7 @@
             margin: 0;
             padding: 0;
             height: 100%; /* Важно для корректной работы высоты body */
-            background-color: transparent;
+            background-color: rgba(255,255,255,0);
         }
         
         body {
@@ -27,6 +27,7 @@
             
             /* Задаем высоту тела документа равной 100% высоты окна браузера */
             height: 100vh; 
+            background-color: rgba(255,255,255,0);
         }
 
         h1 {
@@ -35,6 +36,7 @@
             font-size: 3rem;
             color: #333; /* Темно-серый цвет текста */
             text-align: center;
+            background-color: rgba(255,255,255,0);
         }
     </style>
 </head>
