--- a/transparent.html
+++ b/transparent.html
@@ -16,7 +16,7 @@
             margin: 0;
             padding: 0;
             height: 100%; /* Важно для корректной работы высоты body */
-            background-color: rgba(255,0,0,255);
+            background-image:none;
         }
         
         body {
