--- a/safearea.html
+++ b/safearea.html
@@ -8,8 +8,13 @@
       viewport-fit=cover - это ключ к тому, чтобы страница заняла всю область экрана,
       и браузер предоставил значения для safe-area-inset-*.
     -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     
+    <!--
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    -->
+
+    <meta name="viewport" content="viewport-fit=cover">
+
     <title>Тест CSS env() переменных</title>
 
     <style>
