--- a/safearea.html
+++ b/safearea.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     -->
 
-    <meta name="viewport" content="viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
     <title>Тест CSS env() переменных</title>
 
