--- a/safearea.html
+++ b/safearea.html
@@ -29,10 +29,10 @@
           Если env() не поддерживается, будет использовано резервное значение (0px).
         */
         :root {
-            --safe-top: env(safe-area-inset-top, 0px);
-            --safe-bottom: env(safe-area-inset-bottom, 0px);
-            --safe-left: env(safe-area-inset-left, 0px);
-            --safe-right: env(safe-area-inset-right, 0px);
+            --safe-top: env(safe-area-max-inset-top, 0px);
+            --safe-bottom: env(safe-area-max-inset-bottom, 0px);
+            --safe-left: env(safe-area-max-inset-left, 0px);
+            --safe-right: env(safe-area-max-inset-right, 0px);
         }
 
         .container {
