--- a/pagewithborder.html
+++ b/pagewithborder.html
@@ -2,25 +2,59 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Страница с рамкой</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Страница с рамкой и полем ввода</title>
     <style>
-        html, body {
-            height: 100%; /* Занимаем всю высоту окна */
-            margin: 0;    /* Убираем отступы по умолчанию */
-            padding: 0;   /* Убираем внутренние отступы */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
-        
+
         body {
             background-color: #cccccc; /* Серый фон */
-            border: 10px solid red;    /* Красная рамка 10px */
-            box-sizing: border-box;    /* Учёт рамки в общих размерах */
-            min-height: 100%;          /* Минимальная высота = окну браузера */
-            padding: 0;
-            margin: 0;
+            border: 10px solid red;    /* Красная рамка */
+            min-height: 100vh;         /* Минимальная высота = высоте окна */
+            padding: 20px;
+            display: flex;
+            justify-content: center;   /* Горизонтальное центрирование */
+            align-items: center;       /* Вертикальное центрирование */
+            font-family: Arial, sans-serif;
+        }
+
+        .center-container {
+            text-align: center;
+            width: 100%;
+            max-width: 400px;
+        }
+
+        input {
+            width: 100%;
+            padding: 15px;
+            font-size: 18px;
+            border: 2px solid #333;
+            border-radius: 8px;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        input:focus {
+            outline: none;
+            border-color: #ff0000;
+            box-shadow: 0 0 10px rgba(255, 0, 0, 0.5);
+        }
+
+        .title {
+            color: #333;
+            margin-bottom: 30px;
+            font-size: 24px;
         }
     </style>
 </head>
 <body>
-    <!-- Контент страницы -->
+    <div class="center-container">
+        <h1 class="title">Введите текст</h1>
+        <input type="text" placeholder="Начните вводить здесь...">
+    </div>
 </body>
 </html>
